# cmake-cpp-modules-example

./: CMakeLists.txt  README.md  bar.cpp  foo.cpp  main.cpp  std_modules.cmake
